Request and response add to DB