@@ -1,15 +1,18 @@
 package my.example.Weather.bot.servise;
 
-import com.sun.research.ws.wadl.HTTPMethods;
+
 import lombok.extern.slf4j.Slf4j;
+import my.example.Weather.bot.Model.UserRequestModel;
+import my.example.Weather.bot.repository.UserRequestRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
 
 @Slf4j
 @Service
@@ -18,32 +21,50 @@ public class WeatherService {
     @Autowired
     private RestTemplate restTemplate;
 
-    private final String API_KEY = "618f3266441d9ec859db854ec9ed7c5f"; // Укажите свой API-ключ
-    private final String BASE_URL = """
-            https://api.openweathermap.org/data/2.5/weather""";
-
+    @Autowired
+    private UserRequestRepository userRequestRepository;
 
     public String getWeather(String cityName) {
         try {
             System.out.println("CityName=" + cityName);
+            String BASE_URL = """
+                    https://api.openweathermap.org/data/2.5/weather""";
+            // Укажите свой API-ключ
+            String API_KEY = "618f3266441d9ec859db854ec9ed7c5f";
             String url = String.format("%s?q=%s&appid=%s&units=metric", BASE_URL, cityName, API_KEY);
-            // Выполняем GET-запрос
+                       HttpHeaders headers = new HttpHeaders();
+            headers.set("Accept", "application/json"); // Добавьте другие заголовки, если необходимо
+            headers.set("User-Agent", "PostmanRuntime/7.42.0");
+            headers.set("Connection", "keep-alive");
+            HttpEntity<String> entity = new HttpEntity<>(headers);
             System.out.println(url);
-            WeatherResponse response = restTemplate.getForObject(url, WeatherResponse.class);
+            ResponseEntity<WeatherResponse> response = restTemplate.exchange(url, HttpMethod.GET, entity, WeatherResponse.class);
 
-            if (response != null && response.getMain() != null) {
-                return String.format("Погода в %s: %s°C, %s",
-                        cityName,
-                        response.getMain().getTemp(),
-                        response.getWeather().getFirst().getDescription());
+            if (response != null ) {
+                return String.format("Погода в городе %s: %s°C, %s "
+                            +System.lineSeparator()+ " Ощущаемая температура: %s"
+                            + System.lineSeparator()+ " Влажность воздуха составляет: %s процентов"
+                            + System.lineSeparator()+ " Скорость ветра: %s метров в секунду ",
+                    cityName,
+                    response.getBody().getMain().getTemp(),
+                    response.getBody().getWeather().get(0).getDescription(),
+                    response.getBody().getMain().getFeelsLike(),
+                    response.getBody().getMain().getHumidity(),
+                    response.getBody().getWind().getSpeed());
+
             } else {
                 return "Не удалось получить данные о погоде.";
             }
         } catch (Exception e) {
             System.err.println(e.getMessage());
-            System.err.println();
+            System.err.println( e.fillInStackTrace());
         }
-
         return null;
+    }
+
+    public void saveInfo(String chatId,String request,String weatherInfo) {
+        LocalDateTime localDateTime = LocalDateTime.now();
+        UserRequestModel userRequestModel = new UserRequestModel(chatId,request,weatherInfo,localDateTime.toString());
+        userRequestRepository.save(userRequestModel);
     }
 }
